# Wheeled_robot_sim

./: LICENSE  README.md
2.Simulation/Matlab/: Jacobi.m  LQR.m  robot.slx
2.Simulation/Matlab/robot/: package.xml
2.Simulation/Matlab/robot/config/: joint_names_robot.yaml
2.Simulation/Matlab/robot/launch/: display.launch  gazebo.launch
2.Simulation/Matlab/robot/meshes/: LF_2.STL  RF_2.STL
2.Simulation/Matlab/robot/urdf/: robot.csv  robot.urdf
2.Simulation/Model/: Robot.SLDASM  body.wrl  leg_3.SLDPRT  leg_3.STEP  wheel.SLDPRT  wheel.STEP  wheel.wrl
2.Simulation/TOE_balence/: CMakeLists.txt
2.Simulation/TOE_balence/meshes/: LB_1.STL  RB_1.STL  RF_1.STL
2.Simulation/webots_test/controllers/c_ctrl/: c_ctrl.c  control_set.h  init.h  type_def.h
2.Simulation/webots_test/controllers/cpp_test1/: cpp_test1.cpp  cpp_test1.vcxproj.filters
2.Simulation/webots_test/worlds/: .TOE_balence.wbproj  TOE_balence.wbt
Matlab/: Jacobi.m
Model/: body.SLDPRT  body.STEP  leg_1.SLDPRT  leg_1.STEP  leg_1.wrl  leg_2.SLDPRT  leg_2.STEP  leg_2.wrl  leg_3.wrl
sim/TOE_balence/: package.xml
sim/TOE_balence/launch/: display.launch  gazebo.launch
sim/TOE_balence/meshes/: L.STL  LB_2.STL  LF_1.STL  R.STL  RB_2.STL  base_link.STL
sim/TOE_balence/urdf/: TOE_balence.csv  TOE_balence.urdf
sim/webots_test/controllers/c_ctrl/: c_ctrl.sln  c_ctrl.vcxproj  c_ctrl.vcxproj.filter  c_ctrl.vcxproj.filters  init.h  type_def.h
sim/webots_test/controllers/cpp_test1/: cpp_test1.sln  cpp_test1.vcxproj  cpp_test1.vcxproj.filter
sim/webots_test/worlds/: TOE_balence.wbt
(+11 files in other folders)
